[gd_scene load_steps=3 format=3 uid="uid://dsioevuka7851"]

[ext_resource type="Script" path="res://scripts/debug/menu.gd" id="1_dc60q"]

[sub_resource type="Theme" id="Theme_riy5f"]
Button/font_sizes/font_size = 20

[node name="Control" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_riy5f")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_dc60q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="NewGameButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ScenePath" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.75
text = "Scene to open"
fit_content = true

[node name="PickSceneButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "@"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Save Data"
fit_content = true

[node name="LoadNewGameButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Load New Game"

[node name="LoadLastSaveButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Last Save"

[node name="SaveData" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 11
placeholder_text = "Save Data"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(0, 18)
size = Vector2i(767, 442)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
root_subfolder = "res://scenes/world"
filters = PackedStringArray("*.tscn,*.scn;Scene Files")

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PickSceneButton" to="." method="_on_pick_scene_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/LoadNewGameButton" to="." method="_on_load_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/LoadLastSaveButton" to="." method="_on_load_last_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
